--- a/style.css
+++ b/style.css
@@ -416,18 +416,18 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            border-right: 1px dashed #8e0038;
+            border-right: 1px dashed #000;
             display: none; }
             @media (max-width: 600px) {
               .pa__products .products .product .product__info .product__description .more__information .more__information__first__container {
                 border: none; } }
             .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .energy__value {
               text-align: center;
-              color: #8e0038;
+              color: #000;
               font-size: 16px; }
             .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .caloric__content {
               text-align: center;
-              color: #8e0038;
+              color: #000;
               font-size: 16px; }
             .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .product__diagram {
               display: flex;
@@ -482,7 +482,7 @@
                 .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .product__diagram .dig .proteins,
                 .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .product__diagram .dig .fats,
                 .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .product__diagram .dig .carbohydrates {
-                  color: #8e0038;
+                  color: #000;
                   font-size: 16px; }
                   @media (max-width: 1402px) {
                     .pa__products .products .product .product__info .product__description .more__information .more__information__first__container .product__diagram .dig .proteins,
@@ -494,7 +494,7 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
-            color: #8e0038;
+            color: #000;
             font-size: 14px;
             margin-left: 10px;
             width: 100%;
@@ -549,13 +549,14 @@
 .pa__history .flex {
   display: flex;
   flex-direction: column; }
-  .pa__history .flex p {
+  .pa__history .flex .history__pa__header {
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 20px; }
+  .pa__history .flex .history__pa {
     margin-bottom: 20px;
     font-size: 16px;
     font-weight: 400; }
-    .pa__history .flex p span {
-      font-weight: bold;
-      font-size: 18px; }
   .pa__history .flex .last {
     margin-bottom: 60px; }
   .pa__history .flex .img__container {
@@ -690,7 +691,7 @@
       @media (max-width: 990px) {
         .news__section .news__flex__container .card__news .news__img img {
           width: 300px;
-          margin-bottom: 30px; } }
+          margin: 30px 0; } }
     .news__section .news__flex__container .card__news .news__desc {
       font-size: 20px;
       font-weight: 400;
@@ -1158,7 +1159,7 @@ body {
       flex-direction: column; } }
   .main__page .pa__6 .advantages .advent__block {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     max-width: 35%;
     padding-top: 50px; }
     @media (max-width: 700px) {
@@ -1175,7 +1176,7 @@ body {
       justify-content: center;
       align-items: center; }
     .main__page .pa__6 .advantages .advent__block .block__text {
-      font-size: 12px;
+      font-size: 16px;
       color: #8e0038;
       text-transform: uppercase;
       font-weight: bold;
@@ -1200,7 +1201,8 @@ body {
   .main__page .pa__7 .pa__partners .partners {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly; }
+    justify-content: space-between;
+    width: 100%; }
     .main__page .pa__7 .pa__partners .partners .partner {
       max-width: 160px; }
 
