--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: start;
       height: 260px; }
       @media (max-width: 900px) {
         .pa__products .products .product .product__info {
@@ -726,7 +726,6 @@ body {
 
 .products__header__section .header__body, .main__page .header__section .header__body {
   background-color: #2c2c2c;
-  border-bottom: 1px solid #fff;
   height: 50px;
   opacity: 0.8; }
 
@@ -734,8 +733,7 @@ body {
   background-color: inherit;
   box-shadow: none;
   max-width: 350px;
-  height: 50px;
-  border-bottom: 1px solid #fff; }
+  height: 50px; }
 
 .pa__header, .main__page .pa__header {
   margin-bottom: 46px;
@@ -808,10 +806,10 @@ body {
   background-position: 0px 0px;
   max-width: 100%;
   z-index: 50;
-  height: 640px; }
-  @media screen and (min-width: 250px) and (max-width: 1275px) {
+  height: 85vh; }
+  @media (max-height: 500px) {
     .main__page .header__section {
-      background-position: 0px 0px; } }
+      height: 500px; } }
   .main__page .header__section .header__body {
     min-width: 100%;
     position: absolute;
@@ -825,7 +823,7 @@ body {
         align-items: center;
         margin: 0;
         padding: 0;
-        margin-top: 210px;
+        margin-top: 50px;
         background-color: inherit;
         box-shadow: none;
         border-bottom: none; } }
@@ -873,26 +871,30 @@ body {
         left: 0px !important; } }
     .main__page .header__section .header__body .header__brands {
       max-width: 250px;
-      height: 400px;
+      height: 60vh;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      margin-top: 50px; }
+      margin-top: 100px; }
       @media (max-width: 990px) {
         .main__page .header__section .header__body .header__brands {
-          margin-top: 20px;
+          margin-top: 300px !important;
           order: 2; } }
       @media (max-width: 415px) {
         .main__page .header__section .header__body .header__brands {
+          margin-top: 130px !important;
           max-height: 500px;
           max-width: 250px; } }
       .main__page .header__section .header__body .header__brands .second {
         margin-left: 8px; }
       .main__page .header__section .header__body .header__brands .arrow {
-        width: 100px;
+        width: 90px;
         margin-top: auto;
-        opacity: 0.7; }
+        transition: 1s ease 0s; }
+        .main__page .header__section .header__body .header__brands .arrow:hover {
+          transform: rotate(1turn);
+          transition: 1s ease 0s; }
       .main__page .header__section .header__body .header__brands img {
         max-width: 100%; }
     @media (max-width: 990px) {
@@ -902,12 +904,13 @@ body {
         opacity: 0.8;
         box-shadow: 1px 1px 9px grey;
         padding: 10px;
-        border-bottom: 1px solid #fff;
         height: 65px;
         max-width: 100%;
         margin: 0;
         padding-right: 35px;
-        padding-left: 35px; } }
+        padding-left: 35px;
+        position: fixed;
+        top: 0; } }
     .main__page .header__section .header__body .header__icons .header__icons__list {
       display: flex;
       justify-content: flex-start;
@@ -1009,41 +1012,64 @@ body {
   background-position: 0px 0px;
   height: 250px;
   padding-top: 0px; }
-  .main__page .pa__2 .bg__red {
-    background-color: #7d06328c; }
-    .main__page .pa__2 .bg__red .about__us {
-      display: flex;
-      justify-content: space-around;
-      height: 250px;
-      align-items: center; }
-      @media (max-width: 680px) {
-        .main__page .pa__2 .bg__red .about__us {
-          flex-direction: column; } }
-      .main__page .pa__2 .bg__red .about__us .pa__2__text {
-        text-align: center;
-        padding: 20px 50px;
-        background: #e9d6ddda;
-        border-radius: 6%; }
-        .main__page .pa__2 .bg__red .about__us .pa__2__text:hover {
-          background-color: #fff !important;
-          transition: 0.5s ease 0s; }
-        .main__page .pa__2 .bg__red .about__us .pa__2__text .text {
-          color: #8e0038;
-          font-size: 20px;
-          text-transform: uppercase;
-          font-weight: 500; }
+  .main__page .pa__2 .bg__red .about__us {
+    display: flex;
+    justify-content: space-around;
+    height: 250px;
+    align-items: center; }
+    @media (max-width: 680px) {
+      .main__page .pa__2 .bg__red .about__us {
+        flex-direction: column; } }
+    .main__page .pa__2 .bg__red .about__us .pa__2__text {
+      text-align: center;
+      padding: 20px 50px;
+      background: #e9d6ddda;
+      border-radius: 6%; }
+      .main__page .pa__2 .bg__red .about__us .pa__2__text:hover {
+        background-color: #fff !important;
+        transition: 0.5s ease 0s; }
+      .main__page .pa__2 .bg__red .about__us .pa__2__text .text {
+        color: #8e0038;
+        font-size: 20px;
+        text-transform: uppercase;
+        font-weight: 500; }
 
 .main__page .swiper {
-  padding: 0px 40px 45px 45px; }
-  .main__page .swiper .con {
-    display: flex; }
-    .main__page .swiper .con .swiper-slide .card .card-content {
-      background-color: #e8ccd7;
-      color: #8e0038;
-      border-top: 1px solid #fff; }
-      .main__page .swiper .con .swiper-slide .card .card-content:hover {
-        background-color: #8e0038;
+  padding: 0px 40px 45px 45px;
+  height: 250px !important; }
+  .main__page .swiper .con .swiper-slide {
+    display: flex;
+    justify-content: center; }
+    .main__page .swiper .con .swiper-slide .swiper-slide-el {
+      width: 300px !important;
+      height: 200px !important;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; }
+      .main__page .swiper .con .swiper-slide .swiper-slide-el:hover .swiper-slide-el-img {
+        transition: .3s ease 0s;
+        filter: blur(2px); }
+      .main__page .swiper .con .swiper-slide .swiper-slide-el:hover .swiper-slide-el-description {
+        transition: .3s ease 0s;
+        opacity: 1; }
+      .main__page .swiper .con .swiper-slide .swiper-slide-el .swiper-slide-el-img {
+        width: 300px;
+        height: 200px !important;
+        position: absolute;
+        z-index: 0;
+        border-radius: 5px; }
+      .main__page .swiper .con .swiper-slide .swiper-slide-el .swiper-slide-el-title {
+        margin: 10px 5px;
+        font-size: 20px;
+        position: relative;
+        z-index: 1;
         color: #fff; }
+      .main__page .swiper .con .swiper-slide .swiper-slide-el .swiper-slide-el-description {
+        margin: 10px 5px;
+        position: relative;
+        z-index: 1;
+        color: #fff;
+        opacity: 0; }
   .main__page .swiper .swiper-pagination-bullet {
     margin-top: 15px;
     width: 10px;
@@ -1269,7 +1295,6 @@ body {
       .main__page .pa__8 .news__container .card__news .card__news__content .btn {
         background-color: #fff;
         color: #8e0038;
-        border: 2px solid #8e0038;
         font-size: 12px;
         font-weight: 600;
         box-shadow: none;
